--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "expo": "~52.0.39",
     "expo-status-bar": "~2.0.1",
     "i18next": "^24.2.3",
+    "lottie-ios": "^4.5.1",
+    "lottie-react-native": "^7.2.2",
     "react": "18.3.1",
     "react-i18next": "^15.4.1",
     "react-native": "0.76.7",
