--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~52.0.39",
     "expo-status-bar": "~2.0.1",
     "i18next": "^24.2.3",
+    "jest-expo": "~52.0.6",
     "lottie-ios": "^4.5.1",
     "lottie-react-native": "^7.2.2",
     "react": "18.3.1",
@@ -27,10 +28,12 @@
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
     "react-native-svg": "^15.11.2",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "expo-secure-store": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
     "typescript": "^5.3.3"
   },
