--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^7.0.17",
     "@react-navigation/stack": "^7.2.1",
     "@types/react-i18next": "^7.8.3",
     "expo": "~52.0.39",
+    "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
     "i18next": "^24.2.3",
     "jest-expo": "~52.0.6",
@@ -25,11 +27,10 @@
     "react-native-gesture-handler": "^2.24.0",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "^3.17.1",
-    "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
     "react-native-svg": "^15.11.2",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-secure-store": "~14.0.1"
+    "react-native-toast-message": "^2.2.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
